@@ -136,13 +136,13 @@ public class NodeEndpoint extends AbstractProjectEndpoint {
 		fieldUpdate.exampleRequest(nodeExamples.getExampleBinaryUploadFormParameters());
 		fieldUpdate.exampleResponse(OK, nodeExamples.getNodeResponseWithAllFields(), "The response contains the updated node.");
 		fieldUpdate.description("Update the binaryfield with the given name.");
-		fieldUpdate.handler(rc -> {
+		fieldUpdate.blockingHandler(rc -> {
 			String uuid = rc.request().getParam("nodeUuid");
 			String fieldName = rc.request().getParam("fieldName");
 			MultiMap attributes = rc.request().formAttributes();
 			InternalActionContext ac = new InternalRoutingActionContextImpl(rc);
 			binaryFieldHandler.handleUpdateBinaryField(ac, uuid, fieldName, attributes);
-		});
+		}, false);
 
 		EndpointRoute imageTransform = createEndpoint();
 		imageTransform.path("/:nodeUuid/binaryTransform/:fieldName");
